-Djava.ext.dirs replaced by -classpath
Option -Djava.ext.dirs has been deprecated in Java 8u40.