@@ -17,12 +17,15 @@ of a version given by services' ``POM`` file. This can be easily verified sendin
 
 If there is a need, for whatever reason, to use different version of semantics
 library, appropriate JAR file can be stored in a directory listed as value of Java
-property ``java.ext.dirs``. For example, when ``eiffel-remrem-semantics-2.1.3.jar``
+option ``-classpath`` utilizing [wildcard mechanism](https://docs.oracle.com/javase/7/docs/technotes/tools/windows/classpath.html).
+For example, when ``eiffel-remrem-semantics-2.1.3.jar``
 is stored in, say, ``/eiffel/protocols``, the directory must be included in ``java``
 command
 ~~~
-java ... -Djava.ext.dirs=...:/eiffel/protocols:... -jar .../generate.war
+java ... -classpath "...:/eiffel/protocols/*:..." -jar .../generate.war
 ~~~
+
+Note, that [Resources 'earlier' on the classpath take precedence over resources that are specified after them](https://stackoverflow.com/questions/6644440/java-which-of-multiple-resources-on-classpath-jvm-takes).
 
 New request to ``/versions`` now clearly proves that implementation from newly
 deployed library is used instead of build-in one.
@@ -37,13 +40,10 @@ deployed library is used instead of build-in one.
 }
 ~~~
 
-The reason why the implementation defined in ``eiffel-remrem-semantics-2.1.3.jar``
-was preferred to the one build-in ``generate.war``  is described at
-[Understanding Extension Class Loading](https://docs.oracle.com/javase/tutorial/ext/basics/load.html).
 
 This  feature can be utilized to load completely different implementation of Eiffel
 protocol, for example ``eiffel3``, by adding corresponding library into directory
-included in ``java.ext.dirs``, i.e. ``/eiffel/protocols``. The newly added library
+included in ``-classpath``, i.e. ``/eiffel/protocols``. The newly added library
 causes that output of ``/versions`` request looks like this
 ~~~
 {
